--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,40 @@
 /*::selection { background-color: #E13300; color: white; }
 	::-moz-selection { background-color: #E13300; color: white; }
 */
- 
 	body {
-		background-color: #FAFAFA; 
+		background-color: #FAFAFA;
 		font-style: normal;
 		font-size:13px;
         font-family: 'Roboto', 'Lucida Grande','Ubuntu','sans-serif';
 		color: #4F5155;
 		font-weight:300;
 		scrollbar-face-color: #EAEAEA;
-		overflow-y:hidden;		
+		overflow-y:hidden;
 	}
 
 	a {
-		color: #003399;
+		color: #fff;
 		background-color: transparent;
 		font-weight: normal;
         outline: none;
         text-decoration: none;
 	}
 
-	h1 { 
+	a:hover {
+		color: #fff;
+        outline: none;
+        text-decoration: none;
+	}
+
+	h1 {
 		font-size: 15px;
 		font-weight: normal;
 		margin: 0 0 14px 0;
 		padding: 14px 15px 10px 15px;
 	}
-
+	h5{
+		font-family: 'Roboto', 'Lucida Grande','Ubuntu','sans-serif';
+	}
 	code {
 		font-family: Consolas, Monaco, Courier New, Courier, monospace;
 		font-size: 12px;
@@ -42,7 +49,12 @@
 	#body {
 		margin: 0 15px 0 15px;
 	}
-/* GRID AREA */
+/* CUSTOM GRIDS AREA */
+
+.items-col-10{
+	width: 81.45% !important;
+	margin-right: -10px;
+}
 
 img{
 	width:100%;
@@ -67,7 +79,16 @@ header{
 	color:#028C3F;
 }
 .info {
-	color:#0093DD;
+	background-color:#0093DD !important;
+	color:#fff !important;
+	padding: 5px 10px;
+}
+.btn{
+	border-radius: 0 !important;
+}
+.btn-info{
+	background-color:#0093DD !important;
+	color:#fff !important;
 }
 /* Login Page */
 
@@ -89,8 +110,7 @@ header{
   font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
   font-size: 14px;
 }
- 
-.login input[type=text], input[type=password] { 
+.login input[type=text], input[type=password] {
   padding: 0 10px;
   width: 93%;
   height: 34px;
@@ -104,13 +124,13 @@ header{
   -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
 }
- 
+
 .login input[type=text]:focus, input[type=password]:focus {
   border-color: #7dc9e2;
   outline-color: #dceefc;
   outline-offset: 0;
 }
- 
+
 .login input[type=submit] {
   padding: 0 18px;
   height: 29px;
@@ -120,7 +140,7 @@ header{
   text-shadow: 0 1px #e3f1f1;
   background: #cde5ef;
   border: 1px solid;
-  border-color: #b4ccce #b3c0c8 #9eb9c2; 
+  border-color: #b4ccce #b3c0c8 #9eb9c2;
   outline: 0;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
@@ -131,22 +151,22 @@ header{
   background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
   -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-margin:0 auto;
+	margin:0 auto;
     width: 20%;
     margin-top: 20px;
-    
+
 }
- 
+
 .login input[type=submit]:active {
   background: #cde5ef;
   border-color: #9eb9c2 #b3c0c8 #b4ccce;
   -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
-/*Page Wrapper */ 
+/*Page Wrapper */
 .wrapper {
 	height:100h;
-	position: relative; 
+	position: relative;
 }
 /* Dashboard */
 
@@ -158,7 +178,7 @@ margin:0 auto;
 }
 #logo-dashboard img{
     width: 90%;
-    padding: 4px 15px 5px;
+    padding: 4px 15px 6px;
 }
 #account-details{
 	background-color:#fff;
@@ -168,7 +188,7 @@ margin:0 auto;
 
 #account-details{
     text-align: right;
-    padding: 22px 0 21px;
+    padding: 21px 0 21px;
 }
 #account-details ul{
     margin: 0;
@@ -183,19 +203,19 @@ margin:0 auto;
     margin: 0;
     padding:0 7px;
     float: left;
-    border-right: 1px dotted #00275B; 
+    border-right: 1px dotted #00275B;
 }
-#account-details ul li:first-child { 
+#account-details ul li:first-child {
     padding-right: 7px;
 }
-#account-details ul li:last-child { 
+#account-details ul li:last-child {
     border-right: 0;
 }
 #account-details ul li a{
     text-decoration: none;
     color: #00275B;
     font-weight: 300;
-} 
+}
 
 /* Content Area */
 #content{
@@ -203,28 +223,29 @@ margin:0 auto;
 	position: relative;
 	top: 57px;
 	height: 90vh;
-	left: 16.6666666666667%; 
+	left: 16.6666666666667%;
 	padding-bottom:50px;
-} 
+}
 
 #crumbs {
-	background-color: #FFF; 
+	background-color: #FFF;
+	border-top: 1px solid #E0E7ED;
 	border-bottom: 1px solid #E0E7ED;
 	padding: 8px;
 	line-height: 25px;
 	color:#3164A5;
     font-weight: 500;
 	margin-left:-15px;
-	margin-right:-15px; 
-	-webkit-box-shadow: 0 3px 2px -1px #EAEAEA;
-     -moz-box-shadow: 0 3px 2px -1px #EAEAEA;
-          box-shadow: 0 3px 2px -1px #EAEAEA;
+	margin-right:-15px;
+	-webkit-box-shadow: 0 3px 2px -1px rgba(234, 234, 234,.7);
+     -moz-box-shadow: 0 3px 2px -1px rgba(234, 234, 234,.7);
+          box-shadow: 0 3px 2px -1px rgba(234, 234, 234,.7);
 	position:fixed;
 	top: 57px;
 	width:66.6666666666667%;
 	z-index:2;
 }
-#crumbs i.fa{ 
+#crumbs i.fa{
 	font-size: 12px;
 	-webkit-text-stroke: 1px #fff;
 }
@@ -232,29 +253,29 @@ margin:0 auto;
 	border: 1px solid #C1C1C1;
 	box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
 }
-#content select{
+/* #content select{
 	border: 1px solid #C1C1C1;
 	box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-}
-#content #dash-blocks{ 
+} */
+#content #dash-blocks{
     text-align: center;
     display: inline-grid;
     vertical-align: middle;
-    font-size: 11px; 
+    font-size: 11px;
     padding: 15% 0% 20%;
     margin-top: 20px;
     border: 1px dotted #0F3A5D;
     min-height: 100px;
-}  
-#dash-blocks p { 
-    display: block; 
+}
+#dash-blocks p {
+    display: block;
     color: #0F3A5D;
 }
- 
-#dash-blocks i { 
+
+#dash-blocks i {
     color: #0F3A5D;
 }
-a #dash-blocks { 
+a #dash-blocks {
     text-decoration: none;
 }
 h5.title{
@@ -264,7 +285,7 @@ h5.title{
 }
 
 /* Commercial Units Tabs */
-#c__u {   
+#c__u {
 	margin-right:-15px;
 	margin-top: 30px;
 }
@@ -272,11 +293,11 @@ h5.title{
 /* Style for various uses of tabs */
 #c__u  ul.tabs{
 	margin:0;
-	padding:0; 
+	padding:0;
 	background-color: #F4F7F8;
-	font-size:11px; 
+	font-size:11px;
 	margin-left:-5px;
-	margin-right:-5px; 
+	margin-right:-5px;
 	float:left;
 }
 #c__u  ul.tabs li{
@@ -290,40 +311,43 @@ h5.title{
 	color:#0F3A5D;
 	font-weight:400;
 	cursor: pointer;
-}  
-#c__u  ul.tabs li{ 
+}
+#c__u  ul.tabs li{
 	border-left:1px solid #E0E7ED;
-} 
-#c__u  ul.tabs li:last-child{ 
+}
+#c__u  ul.tabs li:last-child{
 	border-right:1px solid #E0E7ED;
 }
-  
 #c__u  .tabs li:hover {
     background:#fff;
     }
 #c__u  .tabs li.current{
     background: #fff;
-	border-bottom:1px solid #fff; 
-	
+	border-bottom:1px solid #fff;
 }
 .tab-content{
-    display: none;  
+    display: none;
     line-height:1.4;
     background: #fff;
-	padding:0 5px; 
-	border:1px solid #E0E7ED; 
-	border-top:0; 
+	padding:0 5px;
+	border:1px solid #E0E7ED;
+	border-top:0;
 	margin-right: -5px;
 	margin-left: -5px;
 	float:left;
 	width: 101.1%;
 }
-.tab-content ul{ 
+.tab-content ul{
 	margin:0;
-	padding:0; 
+	padding:0;
 	border-right:1px solid #DDDDDD;
 	list-style: none;
-	height:60vh;
+	height:100%;
+}
+
+.tab-content{
+	height: 100%;
+	margin-bottom: 30px;
 }
 .tab-content.current{
     display: inherit;
@@ -334,37 +358,42 @@ h5.title{
 }
 #c__u h5.town_list{
 	border-bottom:1px solid #DDDDDD;
-	border-top:1px solid #DDDDDD;
+	border-top:0;
 	margin-left:-15px;
 	margin-right:-10px;
 	font-size:11px!important;
 	text-transform:uppercase;
 	padding:8px 15px;
+	margin-top:0 !important;
 }
-#c__u #directives{
+#c__u #directives, #c__u #licences{
 	border-right:1px solid #DDDDDD;
+	border-left:1px solid #DDDDDD;
 	border-bottom:1px solid #DDDDDD;
+	margin-left: -1px;
 	padding-bottom:20px;
-	position:relative; 
-	height:200px; 
+	position:relative;
+	height:200px;
 }
-#c__u #directives ul{ 
-	height:140px; 
+#c__u #directives ul, #c__u #licences ul, #c__u #projects ul{
+	height:140px;
 	border-right:0;
 	margin-left:-15px;
 	margin-right:-15px;
 	padding:5px 15px;
 }
-#c__u #directives h5.d__t{
+#c__u #directives h5.d__t, #c__u #licences h5.l__t, #c__u #projects h5.p__t{
 	border-bottom:1px solid #DDDDDD;
-	border-top:1px solid #DDDDDD;
+	border-top:0;
+    color: #3164A5;
 	margin-left:-15px;
 	margin-right:-15px;
 	font-size:11px!important;
 	text-transform:uppercase;
-	padding:8px 15px;
+	padding:9px 15px;
+	margin-top:0 !important; 
 }
-#c__u #directives li{
+#c__u #directives li, #c__u #licences li, #c__u #projects li{
 	list-style: none;
 	font-size:12px;
 	border-bottom:1px solid #F5F5F5;
@@ -372,11 +401,91 @@ h5.title{
 	margin-left:-15px;
 	margin-right:-15px;
 }
-#c__u #directives li:last-child{ 
-	border-bottom:0; 
+#c__u #directives li:last-child, #c__u #licences li:last-child, #c__u #projects li:last-child{
+	border-bottom:0;
 }
-/*  tabs ~ Sean Catchpole  */ 
-/*  Scrollbar  */ 
+
+/* Licences Block */
+#c__u #licences{
+	border-right: 0;
+	border-left: 0;
+	margin-left: 0;
+}
+#c__u #licences ul{
+	height:140px; 
+}
+/* Projects Block */
+#c__u #projects{
+	border-right:0;
+	border-left:1px solid #DDDDDD; 
+	padding-bottom:20px;
+	position:relative;
+	margin-left: -1px; 
+}
+#c__u #projects ul{
+	height:140px; 
+}
+
+#c__u .tab-content ul.cu_details{
+	margin-right: -5px;
+	margin-left: -5px;
+	border-right: 0 !important;
+}
+#c__u .cu_details h5.c__list{
+	border-bottom:1px solid #DDDDDD;
+	border-top:0;
+    color: #3164A5;
+	margin: 0;
+	font-size:11px!important;
+	text-transform:uppercase;
+	padding:9px 15px;
+	margin-top:0 !important;
+}
+#c__u .c__details {
+	border-top: 1px solid #DDDDDD;
+}
+#c__u thead {
+	border-bottom: 1px solid #DDDDDD;
+}
+#c__u thead th{
+	font-family: 'Roboto';
+	padding: 0;
+}
+
+#c__u table th{
+	padding:7px 5px;
+}
+#c__u table th:first-child{
+	padding-left: 10px;
+}
+#c__u table td:first-child{
+	padding-left: 10px;
+}
+h5 select{
+	font-weight: 400;
+	font-size: 11px;
+}
+.select-style {
+    border: 1px solid #E0E7ED;
+    overflow: hidden;
+    width: 18%;
+}
+
+.select-style select {
+    padding: 4px 10px 3px; 
+    border: none;
+    width: 100%;
+    box-shadow: none; 
+    background: #FFF url("../images/selector.png") no-repeat 100% 50%;
+    -webkit-appearance: none;
+    cursor: pointer;
+}
+
+.select-style select:focus {
+    outline: none;
+}
+/*  tabs ~ Sean Catchpole  */
+/*  Scrollbar  */
 /* Turn on custom 8px wide scrollbar */
 ::-webkit-scrollbar {
   width: 10px; /* 1px wider than Lion. */
@@ -386,12 +495,12 @@ h5.title{
 }
 /* hover effect for both scrollbar area, and scrollbar 'thumb' */
 ::-webkit-scrollbar:hover {
-  border:1px solid #FAFAFA; 
+  border:1px solid #FAFAFA;
 }
- 
+
 /* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
 ::-webkit-scrollbar-thumb:vertical {
-  /* This is the EXACT color of Mac OS scrollbars. 
+  /* This is the EXACT color of Mac OS scrollbars.
      Yes, I pulled out digital color meter */
   background: rgba(229,229,229,229.5);
   -webkit-border-radius: 100px;
@@ -402,13 +511,13 @@ h5.title{
 ::-webkit-scrollbar-thumb:vertical:active {
   background: rgba(229,229,229,0.61); /* Some darker color when you click it */
   -webkit-border-radius: 100px;
-} 
-.scroll { 
-    overflow-y: scroll; 
-} 
-/*  Scrollbar  */ 
+}
+.scroll {
+    overflow-y: scroll;
+}
 
-#sidebar{ 
+/*  Scrollbar  */
+#sidebar{
 	background-color: #fff;
 	border-right: 1px solid #E0E7ED;
 	position:fixed;
@@ -416,46 +525,45 @@ h5.title{
 	padding-bottom: 50px;
 	left: 0;
 	top:57px;
-	z-index: -2;  
+	z-index: -2;
 }
-#sidebar h6{ 
+#sidebar h6{
 	text-transform: uppercase;
 	font-family: 'Roboto', arial, sans-serif;
 	font-weight: 500;
 	padding: 3px 15px;
 }
-#sidebar h6 i.fa{  
-	font-size: 14px; 
+#sidebar h6 i.fa{
+	font-size: 14px;
 }
-#sidebar ul{ 
+#sidebar ul{
 	margin: 0;
 	padding:0;
 }
-#sidebar li{ 
+#sidebar li{
 	list-style: none;
-	padding:0; 
-} 
+	padding:0;
+}
 
-#sidebar li a{ 
+#sidebar li a{
 	color: #5B6870;
 	font-family: 'Roboto', arial, sans-serif;
 	display: block;
 	font-weight:300;
 	padding:6px 15px;
 }
-#sidebar ul ul li{ 
+#sidebar ul ul li{
 	list-style: none;
 	font-size:13px;
 	border-top:1px solid #F7F7F7;
 }
-#sidebar ul ul li.active{ 
-	background: #FAFAFA; 
+#sidebar ul ul li.active{
+	background: #FAFAFA;
 	margin-right:-1px;
 	border-top: 1px solid #EAEAEA;
 	border-bottom: 1px solid #EAEAEA;
-} 
-
-#sidebar ul ul li:last-child{  
+}
+#sidebar ul ul li:last-child{
 	border-bottom:1px solid #F7F7F7;
 }
 #sidebar h3{
@@ -463,7 +571,7 @@ h5.title{
 	font-size: 13px;
 	font-weight: 600;
 }
-#sidebar2{ 
+#sidebar2{
 	background-color: #fff;
 	border-left: 1px solid #DDDDDD;
 	position:fixed;
@@ -471,29 +579,26 @@ h5.title{
 	padding-bottom: 50px;
 	right: 0;
 	top:57px;
-	z-index: -2; 
+	z-index: -2;
 }
- 
-
-#sidebar2 li{ 
+#sidebar2 li{
 	display:block;
 	list-style: none;
 	font-size: 13px;
 }
-
 #sidebar2 #head-panel {
-	background-color: #FFF; 
+	background-color: #FFF;
 	border-bottom: 1px solid #E0E7ED;
-	padding: 8px;
+	padding: 9px;
 	line-height: 25px;
 	color:#3164A5;
     font-weight: 500;
 	margin-left:-15px;
-	margin-right:-16px;  
-} 
+	margin-right:-16px;
+}
 footer {
 		text-align: right;
-		font-size: 11px; 
+		font-size: 11px;
 		line-height: 32px;
 		padding: 0 10px 0 10px;
         background-color: #0F3A5D;
