--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ header{
   font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
   font-size: 14px;
 }
-input[type=text], input[type=password] {
+input[type=text], input[type=password]{
   padding: 0 10px;
   width: 93%;
   height: 34px;
@@ -128,8 +128,19 @@ input[type=text], input[type=password] {
   -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
 }
+input[type=search] {
+  padding: 3px 10px; 
+  color: #404040;
+  background: white;
+  border: 1px solid;
+  border-color: #c4c4c4 #d1d1d1 #d4d4d4;
+  outline: 0px solid #eff4f7;
+  -moz-outline-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
+}
 
-.login input[type=text]:focus, input[type=password]:focus {
+.login input[type=text]:focus, input[type=password]:focus, input[type=search]:focus {
   border-color: #7dc9e2;
   outline-color: #dceefc;
   outline-offset: 0;
@@ -137,7 +148,7 @@ input[type=text], input[type=password] {
 br{
 	padding: 3px 0;
 }
-.login input[type=submit] {
+.login input[type=submit]{
   padding: 0 18px;
   height: 29px;
   font-size: 12px;
@@ -257,7 +268,7 @@ br{
 /* Content Area */
 #content{ 
 	height: 90vh; 
-	padding-bottom:30px;
+	padding-bottom:50px;
 }
 #content input[type=text]{
 	border: 1px solid #C1C1C1;
@@ -458,23 +469,24 @@ h5.title{
 #c__u .c__details {
 	border-top: 1px solid #DDDDDD;
 }
-#c__u table.cu_details th.col-md-0{
+#c__u table.display th.col-md-0{
     width: 5.8% !important;
 }
-#c__u table.cu_details th.col-md-1{
+#c__u table.display th.col-md-1{
     width: 9% !important;
 }
-#c__u table.cu_details th.col-md-2{
+#c__u table.display th.col-md-2{
     width: 9% !important; 
 }
-#c__u table.cu_details th.col-md-2:last-child{
+#c__u table.display th.col-md-2:last-child{
     width: 10% !important; 
 }
-#c__u table.cu_details th.col-md-3{
+#c__u table.display th.col-md-3{
 	width: 23% !important;
 }
 #c__u thead {
-	border-bottom: 1px solid #DDDDDD;
+	border: 1px solid #E0E7ED;
+	background: #E0E7ED;
 }
 #c__u thead th{
 	font-family: 'Roboto';
@@ -483,7 +495,7 @@ h5.title{
 	vertical-align: middle !important;
 	padding:6px 2px;
 }
-#c__u table.cu_details i{
+#c__u table.display i{
 	padding: 0 2px;
 }
 
@@ -493,27 +505,30 @@ h5.title{
 #c__u table td:first-child{
 	padding-left: 10px;
 }
-#c__u table.cu_details tbody {
+#c__u table.display tbody {
     counter-reset: rowNumber;
 }
 
-#c__u table.cu_details tbody tr {
+#c__u table.display tbody tr {
     counter-increment: rowNumber;
     height: 30px;
 	vertical-align: middle !important;
 }
 
-#c__u table.cu_details tbody td {
+#c__u table.display tbody td {
     padding: 5px;
     border-bottom: 1px solid #E0E7ED;
     border-right: 1px solid #E0E7ED;
 }
+#c__u table.display tbody td:first-child {
+	border-left: 1px solid #E0E7ED;
+}
 
-#c__u table.cu_details tbody td:first-child, #c__u table.cu_details tbody td:nth-child(3) {
+#c__u table.display tbody td:first-child, #c__u table.display tbody td:nth-child(3) {
     text-align: center;
 }
 
-#c__u table.cu_details tbody tr td:first-child::before {
+#c__u table.display tbody tr td:first-child::before {
     content: counter(rowNumber);
     min-width: 1em;
     margin-right: 0.5em;
@@ -528,10 +543,19 @@ table.dataTable {
 table.dataTable tbody tr.odd {
     background-color: #F4F7F8;
 }
-
+#table_wrapper {
+	margin: 10px 5px;
+}
+.dataTables_filter {
+	padding-right: 0px;
+}
 table.dataTable td:last-child {
     background-color: #fff;
     border-right: 0;
+}
+table.dataTable thead .sorting:after {
+    opacity: 0.5 !important;
+    content: "\e150";
 }
 h5 select{
 	font-weight: 400;
@@ -562,7 +586,7 @@ h5 select{
 ::-webkit-scrollbar {
   width: 10px; /* 1px wider than Lion. */
   /* This is more usable for users trying to click it. */
-  background-color: rgba(255,255,255,1);
+  background-color: transparent;
   -webkit-border-radius: 100px;
 }
 /* hover effect for both scrollbar area, and scrollbar 'thumb' */
@@ -584,11 +608,11 @@ h5 select{
   background: rgba(229,229,229,0.61); /* Some darker color when you click it */
   -webkit-border-radius: 100px;
 }
+/*  Scrollbar  */
 .scroll {
     overflow-y: scroll;
 }
 
-/*  Scrollbar  */
 #sidebar{
 	background-color: #fff;
 	border-right: 1px solid #E0E7ED;
