--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,7 @@ input[type=text], input[type=password]{
   -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
 }
-input[type=search] {
+input[type=search], select {
   padding: 3px 10px; 
   color: #404040;
   background: white;
@@ -140,7 +140,7 @@ input[type=search] {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
 }
 
-.login input[type=text]:focus, input[type=password]:focus, input[type=search]:focus {
+.login input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, select {
   border-color: #7dc9e2;
   outline-color: #dceefc;
   outline-offset: 0;
